fix: refactor responsive on tablet

--- a/src/styles/css/main.css
+++ b/src/styles/css/main.css
@@ -365,7 +365,7 @@ img {
 .space-content {
   --paddingY: 2.25rem;
   --paddingX: 1.25rem;
-  padding: var(--paddingY) var(--paddingX) 0 var(--paddingY);
+  padding: var(--paddingY) var(--paddingX) 0 var(--paddingX);
 }
 @media screen and (min-width: 90em) {
   .space-content {
@@ -410,7 +410,7 @@ img {
     --rows: 1fr 1fr;
   }
 }
-@media screen and (min-width: 90em) {
+@media screen and (min-width: 62em) {
   .grid-content {
     --rows: 1fr 1fr;
   }
@@ -494,6 +494,11 @@ img {
   background-color: black;
 }
 
+@media screen and (min-width: 48em) {
+  .logo__container .gg__logo {
+    display: none;
+  }
+}
 @media screen and (min-width: 90em) {
   .logo__container .gg__logo {
     display: none;
@@ -502,7 +507,7 @@ img {
 .logo__container .lagom__logo {
   display: none;
 }
-@media screen and (min-width: 90em) {
+@media screen and (min-width: 48em) {
   .logo__container .lagom__logo {
     display: block;
   }
@@ -596,6 +601,11 @@ img {
     flex-direction: row;
     justify-content: center;
     align-items: center;
+  }
+}
+@media screen and (min-width: 62em) {
+  .images__content {
+    overflow-x: hidden;
   }
 }
 
